package com.securus.cyberbullet.domain;

/** Ciclo de vida de uma missao. */
public enum MissionStatus {
    PLANNED,
    IN_PROGRESS,
    COMPLETED,
    ABORTED
}
